apply plugin: "java-library"

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    api(project(":engine"))

    def arch = ""
    if (System.getProperty("os.arch") == "aarch64") {
        arch = "-aarch64"
    }

//    def javaFx = "18-ea+9:linux"
//    def javaFx = "18-ea+10:linux"
    def javaFx = "18.0.2:win"
//    def javaFx = "16:linux"
//    def javaFx = "17-ea+2:linux"
//    def javaFx = "11.0.2:linux"
    api "org.openjfx:javafx-base:$javaFx"
    api "org.openjfx:javafx-web:$javaFx"
    api "org.openjfx:javafx-graphics:$javaFx"
    api "org.openjfx:javafx-controls:$javaFx"
    api "org.openjfx:javafx-media:$javaFx"
}

compileJava {
    options.encoding = "UTF-8"
    options.incremental = true
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
    ])
}